next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the CVS log comments.  A copy of
the CVS logs is updated daily at the following URL:

  http://maptools.org/dl/mapserver_Changelog.txt


Version 4.10.1 (??)
-------------------

- Added feature to the CGI to check runtime substitutions against patterns
  defined in layer metadata. (bug 1918)

- Fixed INCLUDEs to accept paths relative to the location of the mapfile (bug 1880)

- maperror.c: fix long in-image error message wrapping (bug 1963)

- maperror.c: fix closing of stderr/stdout after writing error msg (bug 1970)

- Fixed setRotation() to check for MS_SUCCESS, not MS_TRUE (bug 1968)

- sde->row_id_column needs to be initialized to NULL in msSDELayerOpen (bug 1953)

- Makefile.in: fix mapogr rule so that it works with regular make (not gnumake)

- Fixed bug in loadExpressionString (bug 1948)


Version 4.10.0 (2006-10-04)
---------------------------

- No source code changes since 4.10.0-rc1

Known issues in 4.10.0:

- PHP5 not detected properly on Mandriva Linux (bug 1923)

- Mapfile INCLUDE does not work with relative paths on Windows (bug 1880)

- Curved labels don't work with multibyte character encodings (bug 1921)

- Quotes in DATA or CONNECTION strings produce parsing errors (bug 1549)



Version 4.10.0-RC1 (2006-09-27)
-------------------------------

- [SLD] quantity values for raster sld can be float values instead of just 
   being integer

- Hiding labelitemindex, labelsizeitemindex, labelangleitemindex
  from the SWIG interface (bug 1906)

- Fixed computation of geotransform to match BBOX (to edges of image) not
  map.extent (to center of edge pixels).  (bug 1916)

- mapraster.c: Use msResampleGDALToMap() for "upside down" images. (bug 1904)


Version 4.10.0-beta3 (2006-09-06)
---------------------------------
